<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2E2E2E"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navigation.tournament.TournamentDetailFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.navigation.tournament.TournamentDetailFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tournament_detail"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivCross"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/cross" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient" />

    </FrameLayout>


    <com.agrawalsuneet.dotsloader.loaders.TrailingCircularDotsLoader
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:trailingcircular_animDelay="200"
        app:trailingcircular_animDuration="1200"
        app:trailingcircular_bigCircleRadius="40dp"
        app:trailingcircular_dotsColor="@color/loader_selected"
        app:trailingcircular_dotsRadius="11dp"
        app:trailingcircular_noOfTrailingDots="5" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="true"
        tools:text="MatchRoom.Live British Open" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#A13030" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1">

        <TextView
            android:id="@+id/txtConstLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/location"
            android:textColor="#A13030" />

        <TextView
            android:id="@+id/txtConstVenue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/venue"
            android:textColor="#A13030" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_outline_location_on_24"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/txtLocation"
        app:layout_constraintBottom_toBottomOf="@+id/txtLocation"
        app:tint="@color/white" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_outline_location_on_24"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/txtVenue"
        app:layout_constraintBottom_toBottomOf="@+id/txtVenue"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="Leicester" />

    <TextView
        android:id="@+id/txtVenue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="Morningside Arena" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLocation">

        <TextView
            android:id="@+id/txtConstStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/start_date"
            android:textColor="#A13030" />

        <TextView
            android:id="@+id/txtConstFinishDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/finish_date"
            android:textColor="#A13030" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:text="16 Aug 2021" />

    <TextView
        android:id="@+id/txtFinishDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:text="22 Aug 2021" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_outline_access_time_24"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/txtLocation"
        app:layout_constraintBottom_toBottomOf="@+id/txtStartDate"
        app:tint="@color/white" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_outline_access_time_24"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/txtVenue"
        app:layout_constraintBottom_toBottomOf="@+id/txtFinishDate"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtStartDate">

        <TextView
            android:id="@+id/txtConstTotalPrize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/total_prize_money"
            android:textColor="#A13030" />

        <TextView
            android:id="@+id/txtConstWinnerPrize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/winner_prize_money"
            android:textColor="#A13030" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTotalPrizeMoney"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:text="470,000" />

    <TextView
        android:id="@+id/txtWinnerPrizeMoney"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:text="100,000" />

    <ImageView
        android:id="@+id/ivTotalPrice"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/libra"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/txtLocation"
        app:layout_constraintBottom_toBottomOf="@+id/txtTotalPrizeMoney"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/ivWinnerPrice"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/libra"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/txtVenue"
        app:layout_constraintBottom_toBottomOf="@+id/txtWinnerPrizeMoney"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTotalPrizeMoney">

        <TextView
            android:id="@+id/txtConstFormat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/format"
            android:textColor="#A13030" />

        <TextView
            android:id="@+id/txtConstCurrentChampion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/current_champion"
            android:textColor="#A13030" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtFormat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:text="Ranking event" />

    <TextView
        android:id="@+id/txtCurrentChampion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:text="Mark Williams" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_outline_star_border_24"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/txtLocation"
        app:layout_constraintBottom_toBottomOf="@+id/txtFormat"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/ivCurrentChampion"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/trofeo"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/txtVenue"
        app:layout_constraintBottom_toBottomOf="@+id/txtCurrentChampion"
        app:tint="@color/white" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/txtCurrentChampion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#A13030" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>